# CodingEveryDay

./: README.md  interview.txt  meld-3.18.2.tar.xz  play.sh  run.sh
1 iterative_closest_point/source/: CMakeLists.txt  iterative_closest_point.cpp  iterative_closest_point_demo.cpp  iterative_closest_point_how_to_transform.cpp
3 normal_distributions_transform/source/: CMakeLists.txt  normal_distributions_transform.cpp
CMake/ch001/: 您好世界.c
CMake/ch002/: 您好CMake.cmake
CMake/ch003/: 命令调用.cmake
CMake/ch004/: math.cmake
CMake/ch005/: 快速排序.cmake
CMake/ch006/使用mylib/: CMakeLists.txt  main.c
CMake/ch007/target_link_libraries/: CMakeLists.txt  a.c  b.c
CMake/ch007/别名目标/: CMakeLists.txt
CMake/ch007/库导入目标/: CMakeLists.txt
CMake/ch007/接口库/: CMakeLists.txt  main.c
CMake/ch007/接口库/include/: a.h
CMake/ch007/无需传递/: CMakeLists.txt
CMake/ch007/源文件属性/: CMakeLists.txt  main.c
CMake/ch007/源文件属性/a/: CMakeLists.txt
CMake/ch007/源文件属性/b/: CMakeLists.txt
CMake/ch007/目标属性/: CMakeLists.txt  main.c
CMake/ch007/目标属性/include/: f.h
CMake/ch007/目标属性/liba/: CMakeLists.txt
CMake/ch007/目标属性/liba/include/: liba.h
CMake/ch007/目标属性/liba/src/: liba.c
CMake/ch007/间接引用/: CMakeLists.txt
CMake/ch008/GENEX_EVAL/: CMakeLists.txt
CMake/ch008/TARGET_GENEX_EVAL/: CMakeLists.txt
CMake/ch008/目标属性/: CMakeLists.txt  main.c
CMake/ch009/CheckIPOSupported/: CMakeLists.txt
CMake/ch011/: CMakeLists.txt
CMake/ch011/cli/: recognize.c
CMake/ch011/cmake/: Findlibpng.cmake
CMake/ch011/include/: num_recognizer.h
CMake/ch011/src/: num_recognizer.cpp
CodingEeryday/CodeInNEU/: a.out  callback.cpp  main1.cpp
CodingEeryday/OOD(面向对象的程序设计)/: 11composition.cpp  11delegation.cpp  11inheritance.cpp  a.out  string.h  templateMethodByHOUJIE.cpp
CodingEeryday/Object_based_copy_assignment/: a.out  copy+Swap.cpp  copy_assignmentWithOutPointer.cpp  copy_assignmentWithPointer.cpp
CodingEeryday/Stack_Head_HouJie/: Stack_Head_HouJie.cpp  a.out  complex.h
CodingEeryday/big five/: a.out  copyassignment.cpp
CodingEeryday/classWithPointer/: a.out  classWithPointer.cpp  shallow_copy_fromBili.cpp  string.h  this.cpp
CodingEeryday/classroomDemo/: copy-assignment.cpp  copy-assignment_demo copy.cpp
CodingEeryday/cout<<pointer/: a.out  cout.cpp
CodingEeryday/modernCpp/: VariadicTemplate.cpp  a.out
CodingEeryday/object_oriented/: a.out  muli_inherit.cpp  polymorphism.cpp  polymorphism_copy.cpp  polymorphism_copy1.cpp  single_inherit.cpp  strategy2PureVirtual.cpp  strategy2PureVirtual_demo.cpp  strategy2virtual.cpp  virtualInherit.cpp
CodingEeryday/pointerError/: a.out  float_pointer.cpp  floating_pointerFromBili.cpp  muliDelete.cpp  pointerError.cpp  stack_heap.cpp
CodingEeryday/polymorphism/: empty_base.cpp  whatispoly.cpp
CodingEeryday/侯捷C++面向对象高级开发源代码/: a.out  string_test.cpp
CompileAndLink/: 删除usr_local_lib_libpcl*后进行ldd的环境变量.txt  手动安装PCL进行ldd的环境变量.txt
Eigen/MatrixXd/: CMakeLists.txt  eigen_Matrixd.cpp
Eigen/eigen_align/: CMakeLists.txt  eigen_align.cpp
ICP/5.3 GICP/: CMakeLists.txt  GICP_exp.cpp  pig_view1.pcd  pig_view2.pcd  rabbit_0.pcd  rabbit_1.pcd
ICP/ICP_gaoxiang_7_9_1/: CMakeLists.txt  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  runch7.sh
ICP/code/: ICP.py
ICP/plot_demo/: ICP.py
ISAM2/: CMakeLists.txt  ImuFactorExample2.cpp  ImuFactorsExample2_Demo_LM_Version.cpp  ImuFactorsExample2_ISAM2.cpp  isam.cpp  isam2.cpp  isam2_TiXiaoShan.cpp
Jacobian/: demo.py
Jacobian/code/: plotPicture.py  printValue.cpp
LIDAR_SLAM/FAST_LIO2_sensordata_to_rosbag/: sensordata_to_rosbag_fastlio.py
LIDAR_SLAM/essencial_script/: lookPCD.sh  playRosBag.sh  run.sh  (+1 more)
ListNode/: ListNode.cpp  a.out  listnode_cppplus.cpp
Math/: fabs.cpp  math.cpp
OpenCV/OpenCV_Calib/: CMakeLists.txt  CameraCalibratorClass.cpp  CameraCalibratorClass.h  calibrate.cpp
PCL_Example/pcl_kdtree/: CMakeLists.txt  kdtree.cpp  savePcd.cpp  trajectory.pcd
PCL_Example/transformPointCloud/: CMakeLists.txt  firstPCDcompare.sh  laserCloudFirstCLoud2.pcd  laserCloudsource.pcd  transformPointCloud.cpp
Pose3/: CMakeLists.txt  Pose3.cpp  Pose3_Only_Rotation.cpp  Pose3_Only_trans.cpp
ROS_rate/: example1_a.cpp
ScottMeyers/: a.out  initialization.cpp  mytimeBymyself.cpp  operatorOverload.cpp  vect.h  vect.hpp  vector.cpp
add/: add.cpp  swap.cpp
add/cpp 24hours/: Assignment.cpp  CMakeLists.txt  PointerSwap.cpp  Reference.cpp  Reference2.cpp  ReferenceSwap.cpp  ReturnPointer.cpp  ReturnReference.cpp  ValuePasser.cpp  run.sh
boost_demo/: CMakeLists.txt  boost.cpp
chrono_time/: test_time.cpp  tic_toc.h
class/: class_funcs.cpp
class/class_pointer/: CMakeLists.txt  classOdomotry.cpp  classOdomotry.h  main.cpp
const/: const.cpp
fibonacci/: a.out  fabna
getenv/: CMakeLists.txt  getenv.cpp
glog_demo/: CMakeLists.txt  glog_mkdir.cpp  log_test.cpp  static.cpp
gtsam_noise/: CMakeLists.txt  gtsam_noise.cpp
ifstream/: Arrows.txt  ifstream.cpp
interview/: a.out  coin.cpp  interview.cpp  interview.txt
iterator/: iterator.cpp
map/: a.out  map.cpp  map_at.cpp  normalMap.cpp
memory_leak/: CMakeLists.txt  heap_leak.cpp
modernCpp/: VariadicTemplate.cpp
pcl_filter/: CMakeLists.txt  PCL_SavePcd.cpp
pcl_visualizer_TEST/: CMakeLists.txt  pcd_write.cpp
pointer/: CMakeLists.txt  pointer.cpp
recur/: a.out  backtracking.cpp  for.cpp  launch.json  permutation.cpp  permutation_pocket.cpp  recur.cpp  settings.json  sort.cpp  tasks.json  test.cpp  全排列.cpp
size_z/: a.out  size_z.cpp
slam14/: runch10.sh  runch7.sh
sort/: bubble_sort.cpp
static/: static.cpp  staticDemo.cpp
str_ptr/: dangling.cpp  stack_ptr.cpp  str_ptr.cpp
string/: const_char.cpp  string.cpp
thread/: CMakeLists.txt  get_id_test.cpp  lock_guard.cpp  middle_mutex_.cpp  mutex.cpp  print_lock_guard.cpp  print_mutex.cpp  print_mutex_after_before.cpp  test.cpp  xianchengDemo.cpp  xianchengNojoin.cpp
thread/atomic/: atomic.cpp  mutex.cpp  normal.cpp
union/: union.cpp
vector/: initializationVector.cpp  reserve.cpp  vector.cpp  vector_dilatation2.cpp  vector_fun.cpp
回调函数/: callback.cpp
异常退出/: assert.cpp
(+369 files in other folders)
