cmake_minimum_required(VERSION 3.2)
project(MY_GRAND_PROJECT)
# find_package(VTK REQUIRED)
# if(VTK_FOUND)
#   message(STATUS "found VTK_DIR")
#   message("VTK_DIR=")
# else(VTK_FOUND)
#   message(FATAL_ERROR "VTK not found. Please set VTK_DIR")
# endif(VTK_FOUND)
# set(VTK_DIR "/usr/local/lib/cmake/vtk-7.1")

set(PCL_DIR "/home/deploy/livox_lidar/pcl-pcl-1.8.0/build")
# set(VTK_DIR "/home/deploy/VTK-7.1.1/VTK-7.1.1/build")

find_package(PCL 1.8 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
# include_directories(${VTK_DIR})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcd_write_test pcd_write.cpp)
# target_link_libraries(pcd_write_test ${PCL_LIBRARIES})
target_link_libraries(pcd_write_test  ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_LIBRARIES})
# target_link_libraries(pcd_write_test ${VTK_DIR} ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_LIBRARIES})
