cmake_minimum_required(VERSION 2.8)
project(CHAPTER12)
set(CMAKE_CXX_STANDARD 20)
add_executable(Reference Reference.cpp)
add_executable(Reference2 Reference2.cpp)
add_executable(Assignment Assignment.cpp)
add_executable(ValuePasser ValuePasser.cpp)
add_executable(PointerSwap PointerSwap.cpp)
add_executable(ReferenceSwap ReferenceSwap.cpp)
add_executable(ReturnPointer ReturnPointer.cpp)
add_executable(ReturnReference ReturnReference.cpp)